# MemMachine

./: .gitignore  pyproject.toml
.github/workflows/: docs-checks.yml  mypy.yml  py-lint.yml  pytest-integration.yml  pytest.yml  ruff-check.yml  ruff-format.yml
docs/core_concepts/: semantic_memory_design.mdx
docs/examples/: python.mdx
examples/: default_query_constructor.py  example_server.py  memmachine_client_demo.py
examples/crm/: crm_server.py  query_constructor.py  slack_server.py  slack_service.py
examples/financial_analyst/: financial_server.py  query_constructor.py
examples/frontend/: app.py  gateway_client.py  llm.py
examples/health_assistant/: health_server.py  query_constructor.py
examples/langgraph/: demo.py  tool.py
examples/semantic_memory/: managed_semantic_memory.ipynb
examples/writing_assistant/: query_constructor.py  writing_assistant_server.py
sample_configs/: episodic_memory_config.cpu.sample  episodic_memory_config.gpu.sample
src/memmachine/: __init__.py  episodic_memory_manager.py  instance_lru_cache.py  session_manager.py  session_manager_interface.py
tools/schema_upgrader/: alembic.ini  mypy.ini  pyproject.toml
tools/schema_upgrader/src/: main.py  postgres_schema_manager.py
tools/schema_upgrader/src/semantic_pgvector/: env.py
tools/schema_upgrader/src/semantic_pgvector/versions/: 3d6aaebdc526_sync_sqlalchemy_schema.py
tools/schema_upgrader/tests/: __init__.py  conftest.py
tools/schema_upgrader/tests/semantic_pgvector/: helpers.py  test_schema_upgrader.py  test_schema_vs_sqlalchemy.py
(+234 files in other folders)
